--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Prepare build environment
-        run: sudo apt-get update && sudo apt-get instal -y build-essential
+        run: sudo apt-get update && sudo apt-get install -y build-essential
       
       - name: Build programs
         run: | 
