--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Build and Upload Programs
+name: Run and Test Executables
 
 on:
   workflow_run:
@@ -29,3 +29,11 @@ jobs:
           timeout 10s ./flush_build -s || echo "Failed or took too long"
           echo "Redirect example"
           timeout 10s ./flush_build -r > output_redirect.txt 2>&1 || echo "Failed or took too long"
+
+          echo "Running Overcommit examples"
+          echo "Default scenario"
+          ./over_commit_build -h
+          timeout 10s ./over_commit_build || echo "Failed or took too long"
+          echo "Fast pauses example"
+          timeout 10s ./over_commit_build -m 500 -a write -p 100 -d 10 || echo "Failed or took too long"
+         
