added test for mandelbrot test

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,3 +66,5 @@ jobs:
           timeout 10s ./over_commit_build || echo "Failed or took too long"
           echo "Running fast pauses example"
           timeout 10s ./over_commit_build -m 500 -a write -p 100000 -d 10 || echo "Failed or took too long"
+          echo "Running fractal mandelbrot example"
+          timeout 10s ./fractal mandelbrot mandelbrot.pgm
